# sci_hid

./: README.md
sci_hid_central/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
sci_hid_central/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf
sci_hid_central/src/: main.c
sci_hid_peripheral/: Kconfig.sysbuild  README.md  prj.conf
sci_hid_peripheral/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf
sci_hid_peripheral/src/: main.c
